--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ WEBHOOK_URL=https://paymentq.vercel.app/webhook
 RAZORPAY_PAYMENT_LINK=https://razorpay.me/@harrycarter?amount=EPec5evqGoRk2C8icWNJlQ%3D%3D
 FULL_FILE_LINK=https://drive.google.com/file/d/18Cc5Ufimywi9jjVciHWm0J4u_1B81Nkc/view?usp=drivesdk
 SAMPLE_FILE_URL=https://raw.githubusercontent.com/Harrycarter555/Payment/main/Screenshot_2024-07-25-22-40-09-416_org.telegram.messenger.jpg
-RAZORPAY_WEBHOOK_SECRET=hellow
+RAZORPAY_SECRET=hellow
 RAZORPAY_MERCHANT_ID=Ocp7qK15zJx883
 # Port for Flask
 PORT=5000
